--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
+
 <body>
+<h1>Welcome to Feeding Time Tracker</h1>
+<h2>Please enter your name below</h2>
+
+<form>
+    <label for="userName">What is your name?</label>
+    <input class="input is-rounded" type="text" id="userName" placeholder="Enter name here!">
+    <input type="submit" value="submit">
+</form>
     
 </body>
 </html>
