--- a/index.html
+++ b/index.html
@@ -9,14 +9,58 @@
 </head>
 
 <body>
-<h1>Welcome to Feeding Time Tracker</h1>
-<h2>Please enter your name below</h2>
 
-<form>
-    <label for="userName">What is your name?</label>
-    <input class="input is-rounded" type="text" id="userName" placeholder="Enter name here!">
-    <input type="submit" value="submit">
-</form>
+<section class="hero is-info is-fullheight">
+  <div class="hero-head">
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item">
+            <h1>Feeding Time Tracker</h1>
+          </a>
+          <span class="navbar-burger" data-target="navbarMenuHeroB">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navbarMenuHeroB" class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item is-active">
+              Home
+            </a>
+            <a class="navbar-item">
+              Baby-Book
+            </a>
+            <a class="navbar-item">
+              Knowledge Library
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+
+
+
+
+  <div class="hero-body">
+    <div class="container has-text-centered">
+        <h1>Welcome to Feeding Time Tracker</h1>
+        <h2>Please enter your name below</h2>
+        <div class="column is-half is-offset-one-quarter">
+            <form>
+                <input class="input is-rounded is-small" type="text" id="userName" placeholder="Enter name here!">
+                <input type="submit" value="submit">
+            </form>
+        </div>
+    </div>
+  </div>
+
+  <!-- <div class="hero-foot">
+  </div> -->
+</section>
     
 </body>
 </html>
