updated script.js to take username and save to local storage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    
 </head>
 
 <body>
@@ -19,20 +20,23 @@
             <h1>Feeding Time Tracker</h1>
           </a>
           <span class="navbar-burger" data-target="navbarMenuHeroB">
-            <span></span>
+            <span>Home</span>
             <span></span>
             <span></span>
           </span>
         </div>
         <div id="navbarMenuHeroB" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active">
+            <a class="navbar-item is-active" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
               Home
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
+                New Profile
+              </a>
+            <a class="navbar-item" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
               Baby-Book
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
               Knowledge Library
             </a>
           </div>
@@ -52,7 +56,7 @@
         <div class="column is-half is-offset-one-quarter">
             <form>
                 <input class="input is-rounded is-small" type="text" id="userName" placeholder="Enter name here!">
-                <input type="submit" value="submit">
+                <input type="submit" value="submit" id="submitbutton">
             </form>
         </div>
     </div>
@@ -62,5 +66,6 @@
   </div> -->
 </section>
     
+<script src='./assets/js/script.js'></script>
 </body>
 </html>
