--- a/feedingpage.html
+++ b/feedingpage.html
@@ -45,14 +45,14 @@
         </div>
 
         <div class="container has-text-centered column is-half is-offset-one-quarter" id="div-with-login">
-          <h1>Press the left or right button to start feeding.</h1>
+          <!-- created h1 with span to show which side last used -->
+          <h1 id="last-side"><span id="side"></span>was used last</h1>
+          <h2>Press the left or right button to start feeding.</h2>
            <div>
-              
-                  <input type="button" value="left " id="feedstartleft">
-                  <input type="button" value="right" id="feedstartright">
-              
+              <input type="button" value="left " id="feedstartleft">
+              <input type="button" value="right" id="feedstartright">
           </div>
-      </div>
+        </div>
 
         <div class="hero-foot">
           <nav class="tabs is-boxed is-fullwidth">
