added timer,swap/stop buttons

--- a/feedingpage.html
+++ b/feedingpage.html
@@ -44,7 +44,7 @@
           </nav>
         </div>
 
-        <div class="container has-text-centered column is-half is-offset-one-quarter" id="div-with-login">
+        <div class="container has-text-centered column is-half is-offset-one-quarter" id="div-with-start-feed-btns">
           <!-- created h1 with span to show which side last used -->
           <h1 id="last-side"><span id="side"></span>was used last</h1>
           <h2>Press the left or right button to start feeding.</h2>
@@ -52,6 +52,13 @@
               <input type="button" value="left " id="feedstartleft">
               <input type="button" value="right" id="feedstartright">
           </div>
+        </div>
+
+        <!-- created timer div -->
+        <div class="container has-text-centered column is-half is-offset-one-quarter" id="timer-div">
+          <h1 id="timer">timer</h1>
+          <button id="swapBtn">Swap Side</button>
+          <button id="stopBtn">Stop</button>
         </div>
 
         <div class="hero-foot">
