completed the baby book page

--- a/feedingpage.html
+++ b/feedingpage.html
@@ -32,7 +32,7 @@
                   <a class="navbar-item" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
                       New Profile
                     </a>
-                  <a class="navbar-item" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
+                    <a class="navbar-item" id="babybooklink" href="./babybook.html">
                     Baby-Book
                   </a>
                   <a class="navbar-item" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
@@ -91,6 +91,7 @@
       
         <!-- had to put moment script before script.js --------------------------->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <!-- <script src='./assets/js/script.js'></script> -->
         <script src='./assets/js/scriptfeedingpage.js'></script>
 </body>
 </html>
