--- a/feedingpage.html
+++ b/feedingpage.html
@@ -43,10 +43,16 @@
             </div>
           </nav>
         </div>
+        <!-- added div for quote of the day -->
+        <div class="container has-text-centered column is-half is-offset-one-quarter" id="quoteDiv">
+          <h1 id="quote"></h1>
+          <h2 id="author"></h2>
+        </div>
 
         <div class="container has-text-centered column is-half is-offset-one-quarter" id="div-with-start-feed-btns">
           <!-- created h1 with span to show which side last used ----------------->
-          <h1 id="last-side"><span id="side"></span>was used last</h1>
+          
+          <h2 id="last-side"><span id="side"></span>was used last</h2>
           <h2>Press the left or right button to start feeding.</h2>
            <div>
               <input type="button" value="left " id="feedstartleft">
