added library page

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         </div>
         <div id="navbarMenuHeroB" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
+            <a class="navbar-item is-active" href="./index.html">
               Home
             </a>
-            <a class="navbar-item" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
+            <a class="navbar-item" href="./index.html">
                 New Profile
               </a>
             <a class="navbar-item" id="babybooklink" href="./babybook.html">
               Baby-Book
             </a>
-            <a class="navbar-item" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
+            <a class="navbar-item" href="./library.html">
               Knowledge Library
             </a>
           </div>
