add tags to populate and script src

--- a/library.html
+++ b/library.html
@@ -42,6 +42,12 @@
             </div>
           </nav>
         </div>
+        <main class="hero-body">
+            <h1 id="heading"></h1>
+            <p id="info"></p>
+            <img src="" alt="" id="wikiimg">
+        </main>
     
 </body>
+<script src="./assets/js/scriptlibrary.js"></script>
 </html>
