small styling changes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
           <a class="navbar-item">
             <h1>Feeding Time Tracker</h1>
           </a>
-          <span class="navbar-burger" data-target="navbarMenuHeroB">
-            <span>Home</span>
-            <span></span>
-            <span></span>
-          </span>
+          
         </div>
-        <div id="navbarMenuHeroB" class="navbar-menu">
+        <div id="navbarMenuHeroB" class="navbar-end">
           <div class="navbar-end">
             <a class="navbar-item is-active" href="https://yurikitchin.github.io/Project1-FeedingTimeTracker/">
               Home
