styling and media queries for all pages

--- a/babybook.html
+++ b/babybook.html
@@ -16,15 +16,11 @@
         <div class="container">
           <div class="navbar-brand">
             <a class="navbar-item">
-              <h1>Feeding Time Tracker</h1>
+              <h2>Feeding Time Tracker</h2>
             </a>
-            <span class="navbar-burger" data-target="navbarMenuHeroB">
-              <span>Home</span>
-              <span></span>
-              <span></span>
-            </span>
+            
           </div>
-          <div id="navbarMenuHeroB" class="navbar-menu">
+          <div id="navbarMenuHeroB" class="navbar-end">
             <div class="navbar-end">
               <a class="navbar-item is-active" href="./index.html">
                 Home
@@ -44,8 +40,10 @@
       </nav>
     </div>
 
-    <main class="hero-body">
+    <main class="hero-body hero-index" id="heroBaby">
+      <h1>Baby Book</h1>
     <section id="baby-book" class="column is-half is-offset-one-quarter">
+      
         <div class="field">
           <label class="label">Baby Name</label>
           <div class="control">
