--- a/index.html
+++ b/index.html
@@ -18,15 +18,11 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item">
-            <h1>Feeding Time Tracker</h1>
+            <h2>Feeding Time Tracker</h2>
           </a>
-          <span class="navbar-burger" data-target="navbarMenuHeroB">
-            <span>Home</span>
-            <span></span>
-            <span></span>
-          </span>
+          
         </div>
-        <div id="navbarMenuHeroB" class="navbar-menu">
+        <div id="navbarMenuHeroB" class="navbar-end">
           <div class="navbar-end">
             <a class="navbar-item is-active" href="./index.html">
               Home
@@ -49,7 +45,7 @@
 
 
 
-<main class="hero-body">
+<main class="hero-body hero-index" >
 
     <div class="container has-text-centered column is-half is-offset-one-quarter" id="div-with-login">
         <h1>Welcome to Feeding Time Tracker</h1>
