--- a/library.html
+++ b/library.html
@@ -15,15 +15,11 @@
             <div class="container">
               <div class="navbar-brand">
                 <a class="navbar-item">
-                  <h1>Feeding Time Tracker</h1>
+                  <h2>Feeding Time Tracker</h2>
                 </a>
-                <span class="navbar-burger" data-target="navbarMenuHeroB">
-                  <span>Home</span>
-                  <span></span>
-                  <span></span>
-                </span>
+               
               </div>
-              <div id="navbarMenuHeroB" class="navbar-menu">
+              <div id="navbarMenuHeroB" class="navbar-end">
                 <div class="navbar-end">
                     <a class="navbar-item is-active" href="./index.html">
                         Home
@@ -42,12 +38,12 @@
             </div>
           </nav>
         </div>
-        <main class="hero-body">
+        <main class="hero-body" id="libraryHero">
             <h1 id="heading"></h1>
             <p id="info"></p>
             <img src="" alt="" id="wikiimg">
         </main>
-    
+    </section>
 </body>
 <script src="./assets/js/scriptlibrary.js"></script>
 </html>
