--- a/feedingpage.html
+++ b/feedingpage.html
@@ -16,15 +16,11 @@
             <div class="container">
               <div class="navbar-brand">
                 <a class="navbar-item">
-                  <h1>Feeding Time Tracker</h1>
+                  <h2>Feeding Time Tracker</h2>
                 </a>
-                <span class="navbar-burger" data-target="navbarMenuHeroB">
-                  <span>Home</span>
-                  <span></span>
-                  <span></span>
-                </span>
+                
               </div>
-              <div id="navbarMenuHeroB" class="navbar-menu">
+              <div id="navbarMenuHeroB" class="navbar-end">
                 <div class="navbar-end">
                   <a class="navbar-item is-active" href="./index.html">
                     Home
