added background images, styled buttons, added last feed time, added readme

--- a/babybook.html
+++ b/babybook.html
@@ -15,14 +15,11 @@
       <nav class="navbar">
         <div class="container">
           <div class="navbar-brand">
-            <a class="navbar-item">
-              <h2>Feeding Time Tracker</h2>
-            </a>
-            
+            <h2 class="navbar-item">Feeding Time Tracker</h2>
           </div>
           <div id="navbarMenuHeroB" class="navbar-end">
             <div class="navbar-end">
-              <a class="navbar-item is-active" href="./index.html">
+              <a class="navbar-item" href="./index.html">
                 Home
               </a>
               <a class="navbar-item" href="./index.html">
@@ -42,6 +39,7 @@
 
     <main class="hero-body hero-index" id="heroBaby">
       <h1>Baby Book</h1>
+      <img src="./assets/images/babyPhoto2.jpg" alt="stylized woman breastfeeding" id="picasso">
     <section id="baby-book" class="column is-half is-offset-one-quarter">
       
         <div class="field">
@@ -62,6 +60,11 @@
           <label class="label">Date of Birth</label>
           <div class="control">
             <p id="babydobptag">Please make a profile.</p>
+         </div>
+        <div class="field">
+          <label class="label">Last Feeding Time</label>
+          <div class="control">
+            <p id="feedTimetag">Please make a profile.</p>
          </div>
         </div>
       </section>
