--- a/library.html
+++ b/library.html
@@ -14,14 +14,11 @@
           <nav class="navbar">
             <div class="container">
               <div class="navbar-brand">
-                <a class="navbar-item">
-                  <h2>Feeding Time Tracker</h2>
-                </a>
-               
+                <h2 class="navbar-item">Feeding Time Tracker</h2>
               </div>
               <div id="navbarMenuHeroB" class="navbar-end">
                 <div class="navbar-end">
-                    <a class="navbar-item is-active" href="./index.html">
+                    <a class="navbar-item" href="./index.html">
                         Home
                       </a>
                       <a class="navbar-item" href="./index.html">
@@ -41,7 +38,10 @@
         <main class="hero-body" id="libraryHero">
             <h1 id="heading"></h1>
             <p id="info"></p>
-            <img src="" alt="" id="wikiimg">
+            <a href="https://www.ngala.com.au/" class="link">NGALA Parenting Line</a>
+            <a href="https://www.breastfeeding.asn.au/" class="link">Australian Breastfeeding Association</a>
+            <img src="./assets/images/picaso.jpg" alt="a scribbled picture of a woman breastfeeding, by picasso" id="picasso">
+            <p>Pablo Picasso</p>
         </main>
     </section>
 </body>
